# neural-style-transfer

./: .coveragerc  .dockerignore  .gitignore  .prospector.yml  .pylintrc  .readthedocs.yaml  404.html  Art_Generation_with_Neural_Style_Transfer_v3a.ipynb  Art_Generation_with_Neural_Style_Transfer_v3a.py  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Dockerfile.tensorboard  MANIFEST.in  Pretrained_Model_LICENSE.txt  README.md  README.rst  cli.py  docker-compose.yml  gui-demo-live-update-generated-image.py  gui-demo2.py  index.html  master.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  tox.ini  vgg_utils.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-dev-container.yml  docker-compose-tensorboard.yml
.github/: labeler.yml
.github/workflows/: lint.yml  test.yaml
build-process_DAG/: index.html
cli/: index.html
docs/: build-process_DAG.md  cicd.md  cli.md  index.md
images/: image.py
reference/SUMMARY/: index.html
reference/artificial_artwork/: index.html
reference/artificial_artwork/__version__/: index.html
reference/artificial_artwork/_demo/: index.html
reference/artificial_artwork/_main/: index.html
reference/artificial_artwork/algorithm/: index.html
reference/artificial_artwork/cli/: index.html
reference/artificial_artwork/cmd_demo/: index.html
reference/artificial_artwork/cost_computer/: index.html
reference/artificial_artwork/disk_interface/: index.html
reference/artificial_artwork/disk_operations/: index.html
reference/artificial_artwork/image/: index.html
reference/artificial_artwork/image/image/: index.html
reference/artificial_artwork/image/image_factory/: index.html
reference/artificial_artwork/image/image_operations/: index.html
reference/artificial_artwork/image/image_processor/: index.html
reference/artificial_artwork/nst_image/: index.html
reference/artificial_artwork/nst_math/: index.html
reference/artificial_artwork/nst_tf_algorithm/: index.html
reference/artificial_artwork/pre_trained_models/: index.html
reference/artificial_artwork/pre_trained_models/vgg/: index.html
reference/artificial_artwork/pretrained_model/: index.html
reference/artificial_artwork/pretrained_model/layers_getter/: index.html
reference/artificial_artwork/pretrained_model/model_handler/: index.html
reference/artificial_artwork/pretrained_model/model_handler_interface/: index.html
reference/artificial_artwork/pretrained_model/model_routines/: index.html
reference/artificial_artwork/production_networks/: index.html
reference/artificial_artwork/production_networks/image_model/: index.html
reference/artificial_artwork/production_networks/style_layer_selector/: index.html
reference/artificial_artwork/style_model/: index.html
reference/artificial_artwork/style_model/graph_builder/: index.html
reference/artificial_artwork/styling_observer/: index.html
reference/artificial_artwork/termination_condition/: index.html
reference/artificial_artwork/termination_condition_adapter/: index.html
reference/artificial_artwork/termination_condition_adapter_factory/: index.html
reference/artificial_artwork/tf_session_runner/: index.html
reference/artificial_artwork/utils/: index.html
requirements/: dev.txt
scripts/: download_pretrained_model.py  gen_api_refs_pages.py  locate-build-artifacts.sh  parse_version.py  post-tests-run.sh  process_sem_ver.py  visualize-dockerfile.py  visualize-ga-workflow.py
search/: search_index.json
src/artificial_artwork/: __init__.py  __version__.py  _demo.py  _logging.py  _logging_config.py  _main.py  algorithm.py  algorithm_progress.py  cli.py  cmd_demo.py  cost_computer.py  disk_interface.py  disk_operations.py  nst_image.py  nst_math.py  nst_tf_algorithm.py  style_layer_selector.py  styling_observer.py  termination_condition_adapter.py  termination_condition_adapter_factory.py  tf_session_runner.py  utils.py
src/artificial_artwork/image/: __init__.py  image.py  image_factory.py  image_operations.py  image_processor.py
src/artificial_artwork/pre_trained_models/: vgg.py
src/artificial_artwork/pretrained_model/: __init__.py  layers_getter.py  model_handler.py  model_handler_interface.py  model_loader.py  model_parameters_utils.py  model_routines.py  vgg_architecture.py
src/artificial_artwork/production_networks/: __init__.py  image_model.py  style_layer_selector.py
src/artificial_artwork/style_model/: __init__.py  graph_builder.py  graph_factory.py  model_design.py
src/artificial_artwork/termination_condition/: __init__.py  termination_condition.py  termination_condition_interface.py
src/artificial_artwork/utils/: __init__.py  proxy.py
src/neural_style_transfer/: algorithm.py  algorithm_progress.py  cli.py  cost_computer.py  disk_interface.py  disk_operations.py  image.py  math.py  model_loader.py  nst_tf_algorithm.py  progress_interface.py  style_layer_selector.py  styling_observer.py  termination_condition_adapter.py  tf_session_runner.py
src/neural_style_transfer/termination_condition/: termination_condition.py  termination_condition_interface.py
src/neural_style_transfer/utils/: memoize.py  subclass_registry.py
src/stubs/: imageio.pyi
src/stubs/scipy/: io.pyi
src/stubs/tensorflow/: __init__.pyi
style/: __init__.py  neural_transfer.py  style_model.py  vgg_utils.py
tests/: conftest.py  test_adding_noise_to_content_image.py  test_algorithm.py  test_algorithm_params.py  test_cli.py  test_content_cost.py  test_cv_model.py  test_disk_ops.py  test_graph_builder.py  test_image.py  test_layer_between_cli_cmd_demo_n_backend.py  test_layers_selection.py  test_math.py  test_memoize.py  test_memory_consumption.py  test_notification.py  test_nst_image.py  test_nst_observer.py  test_nst_results_of_different_processes.py  test_proxy.py  test_session_runner.py  test_style_cost.py  test_style_layers_cost.py  test_subclass_registry.py  test_termination_condition.py  test_termination_condition_adapter.py  test_total_cost.py
tests/test_image/: test_image_processing.py  test_image_processor.py
(+5 files in other folders)
