[metadata]
description = CLI program running a Neural Style Transfer algorithm: re-paint an image with the style of another.
long_description = file: README.rst
keywords = unsupervised learning, deep-learning
license = GNU GPLv3

[options]
url = https://github.com/boromir674/neural-style-transfer
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest
install_requires =
    attrs
    numpy
    imageio


[options.entry_points]
console_scripts =
    neural-style-transfer = neural_style_transfer.cli:cli


[options.packages.find]
where=src

#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv,env,env-dev

[tools:pytest]
python_files = tests/test_*.py tests/* */test_*.py

[isort]
line_length = 120
skip = .tox,venv,env,env-dev
default_section = THIRDPARTY
known_first_party = src,tests

[semantic_release]
version_variable = src/neural_style_transfer/__version__.py:__version__

[check-manifest]
ignore =
    .travis.yml
    .DS_Store
    scripts/*.py
    .bettercodehub.yml
    .scrutinizer.yml
