[metadata]
## Setuptools specific information
name = artificial_artwork
version = 0.6.1
description = Create artificial artwork by transfering the appearance of one image (eg a famous painting) to another user-supplied image (eg your favourite photograph).
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
license_files = LICENSE, Pretrained_Model_LICENSE.txt
platforms = All
author = Konstantinos Lampridis
author_email = k.lampridis@hotmail.com

# represents the web home page of the project
url = https://github.com/boromir674/neural-style-transfer


## PyPi specific information
project_urls =
    Bug Tracker = https://github.com/boromir674/neural-style-transfer/issues
    Source Code = https://github.com/boromir674/neural-style-transfer

keywords = neural style transfer, deep learning, cli
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Artistic Software
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest
install_requires =
    click ~= 8.0.3
    attrs ~= 21.2
    numpy>=1.21.0,<1.22.0
    imageio == 2.10.3
    ; later versions of tensorflow require smaller version of numpy
    ; this smaller version of numpy had not yet implemented types (for mypy)
    tensorflow==2.2.0


[options.entry_points]
console_scripts =
    neural-style-transfer = artificial_artwork.cli:cli


[options.packages.find]
where=src

#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv,env,env-dev

[tools:pytest]
python_files = tests/test_*.py tests/* */test_*.py

[isort]
line_length = 120
skip = .tox,venv,env,env-dev
default_section = THIRDPARTY
known_first_party = src,tests


[semantic_release]
version_variable = src/artificial_artwork/__version__.py:__version__
version_source=source


[check-manifest]
ignore =
    requirements/*
    scripts/*.py
    tox.ini
    .circleci/config.yml
    .travis.yml
    .bettercodehub.yml
    .scrutinizer.yml
    .coveragerc
    .gitignore
    .pylintrc
    .prospector.yml
    .DS_Store
